deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-coding-solitaire-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-coding-solitaire
  template:
    metadata:
      labels:
        app: simple-coding-solitaire
    spec:
      containers:
      - name: simple-coding-solitaire
        image: veeryaa/simple-coding-solitaire:tagname
        ports:
        - containerPort: 5000
