deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-coding-solitaire-service
spec:
  selector:
    app: simple-coding-solitaire
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
