deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solitaire-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "nginx-ingress-letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - solitaire.superb.my.id
      secretName: nginx-ingress-letsencrypt
  rules:
    - host: solitaire.superb.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-coding-solitaire-service
                port:
                  number: 80
